--- a/csv_inspection.ipynb
+++ b/csv_inspection.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# ERD Layout\n",
     "\n",
-    "The following is code from [Quick Database Diagrams](http://www.quickdatabasediagrams.com) for generating an ERD diagram. This was generated using the exploration below."
+    "The following is code from [Quick Database Diagrams](http://www.quickdatabasediagrams.com) for generating an ERD diagram. This was generated using the CSV exploration below."
    ]
   },
   {
